--- a/PStyle.css
+++ b/PStyle.css
@@ -1,59 +1,44 @@
-.fondo-portada{
-    color: black;
-     background-image:url('https://static.vecteezy.com/system/resources/previews/004/834/167/non_2x/frame-of-delicious-candies-decoration-free-vector.jpg');
-
-text-align: center;
-    background-position: center;
-    margin: auto;
+.parrafos{
+   font-size:360%;
+   color:white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-h1{
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size:  220px;
-    margin: 50px;
-    font-weight: 600; /*grosor de la letra*/
-    margin: auto;
+.carousel-item img {
+  height: 350px;     /* tú eliges la altura */
+   /* recorta la imagen sin deformarla */
+  width: 100%;
+    object-fit: contain;
+    align-items: center;
+
 }
 
 
-
-.Ubicaciones{
-    margin: 34px;
-    font-size: 49px;
-    color: black;
-    font-weight: 35px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: auto;
-}
-.boton{
- 
-    color:rgba(179, 116, 21, 0.925);
-   
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 49px;
-    font-weight: 330px;
-    margin-top: 150px;
-    margin-right: 20px;
-   
-    
-   
+body{
+    background-image: url("fondo_dulceeria.png");
+     background-size: cover;
+  background-repeat: repeat; 
+  background-position: center;
 }
 
 
-.icono-busqueda{
-    font-size: 60px;
-    background-color: rgb(234, 227, 240);
-    text-align: center; 
-    margin: auto;
-}
+
+
 .tamaño_imagen img{
-width: 19%;
-height: auto;
-
- 
+ width: 120px;
+    height: 120px;
+    border-radius: 60px;
+    object-fit: cover;
+    margin-top: 10px;
  
 }
-
+.tamaño_imagen{
+     display: flex;
+    flex-direction: column; /* TÍTULO ARRIBA */
+    align-items: center;
+    text-align: center;
+    width: 200px;
+    
+}
 #texto{
     font-size: 40px;
     text-align: center;
@@ -67,9 +52,50 @@ height: auto;
     
 }
 #texto{
-    text-align: right;
+    text-align: center;
 }
 
 
+h1{
+    text-align: center;
+    color: white;
+    font-size: 120px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     font-weight: bold;
+}
 
 
+.diseño_texto{
+    font-size: 45px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+}
+
+.nav-link{
+      font-weight: bold;
+      color: white;
+
+}
+
+.carousel{
+     margin: 80px auto; /* separa del texto y lo centra */
+  display: block;
+}
+
+.Price{
+
+    color:white;
+
+}
+.imagen_Busqueda {
+     width: 170px;      /* tamaño ajustado */
+  height: auto;
+  border-radius: 10px;
+  margin-top: 10px;
+  text-align: right;
+}
+.boton-carrito{
+    color:white;
+    background-color: rgba(0, 0, 0, 0.452);
+    
+}
